--- a/Config.yml
+++ b/Config.yml
@@ -2,4 +2,4 @@ title: Ayotunde Badetan
 #logo: 
 #description: Data/Business Intelligence Analyst
 show downloads: False
-theme: jekyll-theme-minimal
+theme: Jekyll-theme-minimal
