--- a/Config.yml
+++ b/Config.yml
@@ -1,5 +1,5 @@
 title: Ayotunde Badetan
-#logo: 
-#description: Data/Business Intelligence Analyst
-show downloads: False
-theme: Jekyll-theme-minimal
+# logo: 
+# description: Data/Business Intelligence Analyst
+show_downloads: False
+theme: jekyll-theme-minimal
