--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Ayotunde Badetan
-#logo: /Users/ayotunde.badetan/Documents/Personal Documents/My Folder/ID Card/My Picture.jpg
-logo: https://media.licdn.com/dms/image/D4D03AQEbshDVRhqjPA/profile-displayphoto-shrink_800_800/0/1695891207350?e=1724889600&v=beta&t=t9i9k0mTKTJjTqednFI7pX0LZHsMHI9LHG2VBxerJQo
+logo: \Users\ayotunde.badetan\Documents\Personal Documents\My Folder\ID Card\My Picture.jpg
 #description: 
 show_downloads: false
 theme: jekyll-theme-minimal
