--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ayotunde Badetan
-logo: \Users\ayotunde.badetan\Documents\Personal Documents\My Folder\ID Card\My Picture.jpg
+logo: My Picture.jpg
 #description: 
 show_downloads: false
 theme: jekyll-theme-minimal
