--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ayotunde Badetan
 logo: My Picture.jpg
 #description: 
-show_downloads: false
+#show_downloads: false
 theme: jekyll-theme-minimal
